--- a/index.html
+++ b/index.html
@@ -91,13 +91,16 @@
                             </div>
                         </div>
                         
-                        <!-- Spinning Wheel -->
-                        <div class="spinning-wheel" id="spinning-wheel">
-                            <!-- Wheel segments will be created by JS -->
-                            <div class="wheel-center">
-                                <div class="wheel-pointer">▼</div>
+                        <!-- 3D Cylinder Reel -->
+                        <div class="reel-container">
+                            <div class="reel-strip" id="reel-strip">
+                                <!-- Reel segments will be created by JS -->
                             </div>
+                            <div class="wheel-center"></div>
                         </div>
+                        
+                        <!-- Decorative Frame -->
+                        <div class="wheel-frame-deco"></div>
                     </div>
                 </div>
 
