--- a/index.html
+++ b/index.html
@@ -89,11 +89,9 @@
                         <span class="text-3xl">😇</span>
                     </div>
                     <div class="flex gap-1 justify-center grow" id="gold-progress">
-                        <div class="w-5 h-5 rounded-full bg-accent-angel border-2 border-white flex items-center justify-center shadow-sm gold-slot filled">
-                            <span class="text-xs">😇</span>
-                        </div>
-                        <div class="w-5 h-5 rounded-full bg-[#4E342E] border-2 border-[#3E2723] gold-slot"></div>
-                        <div class="w-5 h-5 rounded-full bg-[#4E342E] border-2 border-[#3E2723] gold-slot"></div>
+                        <div class="w-5 h-5 rounded-full bg-[#4E342E] border-2 border-[#3E2723] gold-slot flex items-center justify-center"></div>
+                        <div class="w-5 h-5 rounded-full bg-[#4E342E] border-2 border-[#3E2723] gold-slot flex items-center justify-center"></div>
+                        <div class="w-5 h-5 rounded-full bg-[#4E342E] border-2 border-[#3E2723] gold-slot flex items-center justify-center"></div>
                     </div>
                 </div>
             </div>
@@ -106,11 +104,9 @@
                         <span class="text-3xl">😈</span>
                     </div>
                     <div class="flex gap-1 justify-center grow" id="diamond-progress">
-                        <div class="w-5 h-5 rounded-full bg-accent-demon border-2 border-white flex items-center justify-center shadow-sm diamond-slot filled">
-                            <span class="text-xs">😈</span>
-                        </div>
-                        <div class="w-5 h-5 rounded-full bg-[#4E342E] border-2 border-[#3E2723] diamond-slot"></div>
-                        <div class="w-5 h-5 rounded-full bg-[#4E342E] border-2 border-[#3E2723] diamond-slot"></div>
+                        <div class="w-5 h-5 rounded-full bg-[#4E342E] border-2 border-[#3E2723] diamond-slot flex items-center justify-center"></div>
+                        <div class="w-5 h-5 rounded-full bg-[#4E342E] border-2 border-[#3E2723] diamond-slot flex items-center justify-center"></div>
+                        <div class="w-5 h-5 rounded-full bg-[#4E342E] border-2 border-[#3E2723] diamond-slot flex items-center justify-center"></div>
                     </div>
                 </div>
             </div>
